paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/gcc_c11_tests/c11-align-6/sample_005/target.compile.log
error[E0428]: the name `S` is defined multiple times
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/gcc_c11_tests/c11-align-6/sample_005/target.rs:6:9
   |
 6 |         struct S {
   |         ^^^^^^^^
   |         |
   |         `S` redefined here
   |         previous definition of the type `S` here
...
19 |     check_align!(bool);
   |     ------------------ in this macro invocation
   |
   = note: `S` must be defined only once in the type namespace of this block
   = note: this error originates in the macro `check_align` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0428`.